--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="#"><strong>Levi9 Meetup</strong></a>
+          <a class="brand" href="#registration"><strong>Levi9 Meetup</strong></a>
           <ul class="nav" id="main-menu-left">
             <li><a href="#agenda">Программа</a></li>
             <li><a href="#info">Место проведения</a></li>
-            <li><a href="#">Обратная связь</a></li>
           </ul>
           <div class="pull-right">
             <a href="https://www.facebook.com/Levi9Ukraine" class="social"><i class="facebook"></i></a>
@@ -36,7 +35,7 @@
 
     <div id="slide">
       <div class="container">
-        <div class="wrapper">
+        <div class="wrapper" id="registration">
           <h1>Levi9 Meetup</h1>
           <h3>30 февраля 2013 года, Донецк</h3>
           <p>
