--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3> </h3>
             <br/>
             <p><a href="https://www.facebook.com/events/209780979175410/" class="btn btn-primary btn-large">Регистрация</a>
-                <a href="https://twitter.com/search?q=%23kievfprog" class="btn btn-primary btn-large">#kievfprog</a>
+                <a href="https://twitter.com/search/realtime?q=%23kievfprog" class="btn btn-primary btn-large">#kievfprog</a>
             </p>
             <!-- <iframe width="100%" height="400" src="none yet" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe> -->
         </div>
