--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <![endif]-->
 </head>
 <body>
+
+<a href="https://raw.github.com/proger/kievfprog/master/event.yaml"><img style="position: absolute; top: 40px; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="для гиков"></a>
+
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
