--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
         <div class="wrapper" id="registration">
             <h1>kiev::fprog</h1>
-            <h3> </h3>
+            <h3>3 августа, наконец-то! </h3>
             <br/>
             <p><a href="https://www.facebook.com/events/209780979175410/" class="btn btn-primary btn-large">Регистрация</a>
                 <a href="https://twitter.com/search/realtime?q=%23kievfprog" class="btn btn-primary btn-large">#kievfprog</a>
