--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 <footer>
     <div class="container">
-        <p class="muted credit pull-right">&copy; 2013 @darkproger</p>
+        <p class="muted credit pull-right">&copy; 2013 @darkproger, powered by illumos, fastly and random hacks</p>
     </div>
 </footer>
 
