--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
 <footer>
     <div class="container">
-        <p class="muted credit pull-right">&copy; 2013 @darkproger. site powered by illumos, fasdasastly and random hacks. maps by yandex.</p>
+        <p class="muted credit pull-right">&copy; 2013 @darkproger. site powered by illumos, fastly and random hacks. maps by yandex.</p>
     </div>
 </footer>
 
