--- a/index.html
+++ b/index.html
@@ -109,12 +109,26 @@
         <div class="media" style="float: left; width: 270px; padding-right: 10px;">
             <h5>
                 <span class="badge badge-info">14:00 - 14:40</span>
-                еще будет анонсирован
+                Erlang on Xen
+            </h5>
+            <img class="pull-left img-rounded media-object" data-src="https://secure.gravatar.com/avatar/1338ea36e4b2725e7b7304bf17119b38?s=420&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" style="width: 92px; height: 92px;" src="https://secure.gravatar.com/avatar/1338ea36e4b2725e7b7304bf17119b38?s=420&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png">
+            <div class="media-body">
+                <h5 class="media-heading">
+                    <a href="http://github.com/maximk">Максим Харченко</a>
+                </h5>
+
+                
+            </div>
+        </div>
+        <div class="media" style="float: left; width: 270px; padding-right: 10px;">
+            <h5>
+                <span class="badge badge-info">15:00 - 15:40</span>
+                TBA / ваш доклад
             </h5>
             <img class="pull-left img-rounded media-object" data-src="https://si0.twimg.com/profile_images/3239312258/b225bba2557973dd8daac7eaa5cb0475.jpeg" style="width: 92px; height: 92px;" src="https://si0.twimg.com/profile_images/3239312258/b225bba2557973dd8daac7eaa5cb0475.jpeg">
             <div class="media-body">
                 <h5 class="media-heading">
-                    <a href="None"></a>
+                    <a href="http://twitter.com/dtrace_kitty">котик</a>
                 </h5>
 
                 
