--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                 <h2>Прошедшие встречи</h2>
                 <div>
                     <ul>
+                        <li><a href="http://hotcode.org/program-ru/stages-ru/functional/">FP stage на Hotcode 31 мая - 1 июня 2013</a></li>
                         <li><a href="http://dou.ua/calendar/3151/">Курсы Erlang от @5HT 13-14 апреля 2013</a></li>
                         <li><a href="http://dou.ua/calendar/3068/">kiev::fprog 27 марта 2013</a></li>
                         <li><a href="http://dou.ua/calendar/2513/">Erlang от @darkproger 14 ноября 2012</a></li>
