more functional communities

--- a/index.html
+++ b/index.html
@@ -198,11 +198,13 @@
                     </ul>
                 </div>
 
-                <h2>Функциональщики в других городах</h2>
+                <h2>Еще функциональщики</h2>
                 <div>
                     <a href="http://odhug.github.io/site/">Odessa Haskell User Group</a>
+                    <a href="http://lambda.dn.ua">Донецкий Лямбда-клуб</a>
+                    <a href="https://groups.google.com/forum/?fromgroups#!forum/lispk">Kiev Lisp User Group</a>
                     <ul>
-                        <li>если есть еще, отзовитесь!</li>
+                        <li>если есть еще, отправьте <a href="https://github.com/proger/kievfprog/blob/master/index.mustache#L147">пулл реквест</a>!</li>
                     </ul>
                 </div>
             </div>
