--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="https://twitter.com/search/realtime?q=%23kievfprog" class="btn btn-primary btn-large">#kievfprog</a>
             </p>
             <p>
-            <a href="" class="btn btn-warning">Дополнительная регистрация</a>
+            <a href="https://docs.google.com/forms/d/1L0Aqs6GsgOMa-jXrJDNvLKPdTfKBmS3VnqijFLQmAqM/viewform" class="btn btn-warning">Дополнительная регистрация</a>
             </p>
             <!-- <iframe width="100%" height="400" src="none yet" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe> -->
         </div>
