--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section>
         <a class="anchor" id="agenda"></a>
         <div>
-            <h2>Доклады</h2>
+            <h2>Доклады <small>(расписание будет меняться)</small></h2>
         </div>
 
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
@@ -99,7 +99,7 @@
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
             <h5>
                 <span class="badge badge-info">13:00 — 13:40</span>
-                Сhannel-based concurrency with Go / Clojure / Erlang
+                Сhannel concurrency with Go/Clojure/Erlang
             </h5>
             <img class="pull-left img-rounded media-object" data-src="https://secure.gravatar.com/avatar/b9b7a5ffa24e2af6f877a7950461ba0f?s=420&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" style="width: 92px; height: 92px;" src="https://secure.gravatar.com/avatar/b9b7a5ffa24e2af6f877a7950461ba0f?s=420&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png">
             <div class="media-body">
@@ -127,6 +127,20 @@
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
             <h5>
                 <span class="badge badge-info">15:00 - 15:40</span>
+                Как реализовать Go в Scala
+            </h5>
+            <img class="pull-left img-rounded media-object" data-src="https://secure.gravatar.com/avatar/c87d4df27b1b9684cd84d143b069ec83?s=420&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" style="width: 92px; height: 92px;" src="https://secure.gravatar.com/avatar/c87d4df27b1b9684cd84d143b069ec83?s=420&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png">
+            <div class="media-body">
+                <h5 class="media-heading">
+                    <a href="http://twitter.com/rssh1">@rssh1</a>
+                </h5>
+
+                
+            </div>
+        </div>
+        <div class="media" style="float: left; width: 340px; padding-right: 10px;">
+            <h5>
+                <span class="badge badge-info">16:00 - 16:40</span>
                 TBA / ваш доклад
             </h5>
             <img class="pull-left img-rounded media-object" data-src="https://si0.twimg.com/profile_images/3239312258/b225bba2557973dd8daac7eaa5cb0475.jpeg" style="width: 92px; height: 92px;" src="https://si0.twimg.com/profile_images/3239312258/b225bba2557973dd8daac7eaa5cb0475.jpeg">
