--- a/index.html
+++ b/index.html
@@ -141,6 +141,20 @@
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
             <h5>
                 <span class="badge badge-info">16:00 - 16:40</span>
+                Зависимые типы
+            </h5>
+            <img class="pull-left img-rounded media-object" data-src="https://si0.twimg.com/profile_images/3395648752/e1739470c7c1bb346676f5f0717f06f0.png" style="width: 92px; height: 92px;" src="https://si0.twimg.com/profile_images/3395648752/e1739470c7c1bb346676f5f0717f06f0.png">
+            <div class="media-body">
+                <h5 class="media-heading">
+                    <a href="http://twitter.com/lambdamix">@lambdamix</a>
+                </h5>
+
+                
+            </div>
+        </div>
+        <div class="media" style="float: left; width: 340px; padding-right: 10px;">
+            <h5>
+                <span class="badge badge-info">17:00 - 17:40</span>
                 TBA / ваш доклад
             </h5>
             <img class="pull-left img-rounded media-object" data-src="https://si0.twimg.com/profile_images/3239312258/b225bba2557973dd8daac7eaa5cb0475.jpeg" style="width: 92px; height: 92px;" src="https://si0.twimg.com/profile_images/3239312258/b225bba2557973dd8daac7eaa5cb0475.jpeg">
