--- a/index.html
+++ b/index.html
@@ -46,20 +46,17 @@
             <h3>3 августа, наконец-то! </h3>
             <br/>
             <p>
-                <a href="https://www.facebook.com/events/209780979175410/" class="btn btn-primary btn-large">Регистрация</a>
+                <a href="#" class="btn btn-primary btn-large disabled">Регистрация уже закрыта</a>
                 <a href="https://twitter.com/search/realtime?q=%23kievfprog" class="btn btn-primary btn-large">#kievfprog</a>
             </p>
-            <p>
-            <a href="https://docs.google.com/forms/d/1L0Aqs6GsgOMa-jXrJDNvLKPdTfKBmS3VnqijFLQmAqM/viewform" class="btn btn-warning">Дополнительная регистрация</a>
-            </p>
-            <!-- <iframe width="100%" height="400" src="none yet" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe> -->
+            <!-- <iframe width="100%" height="400" src="False" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe> -->
         </div>
     </div>
 </div>
 <div class="container">
 
     <!-- <section>
-        <iframe width="100%" height="437" src="none yet" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe>
+        <iframe width="100%" height="437" src="False" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe>
       </section> -->
 
     <section>
