--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
                 </h5>
 
                 
+                <h6>
+                    <a href="https://docs.google.com/a/wilab.org.ua/presentation/d/1i3ks3LCnLZS__CAgpOkAOegkMUEuDI37Zr03ycuiim8/present#slide=id.p">Слайды</a>
+                </h6>
             </div>
         </div>
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
