--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <img class="pull-left img-rounded media-object" data-src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-prn1/c41.63.259.259/s160x160/66596_1433235432643_7325878_n.jpg" style="width: 92px; height: 92px;" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-prn1/c41.63.259.259/s160x160/66596_1433235432643_7325878_n.jpg">
             <div class="media-body">
                 <h5 class="media-heading">
-                    <a href="https://www.facebook.com/pokutnik">Alexandr Pokutnik</a>
+                    <a href="https://twitter.com/pokutnik">@pokutnik</a>
                 </h5>
 
                 
@@ -101,7 +101,7 @@
             <img class="pull-left img-rounded media-object" data-src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-prn1/c39.39.487.487/s160x160/946371_10151806146527384_734029411_n.jpg" style="width: 92px; height: 92px;" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-prn1/c39.39.487.487/s160x160/946371_10151806146527384_734029411_n.jpg">
             <div class="media-body">
                 <h5 class="media-heading">
-                    <a href="https://www.facebook.com/anemish">Alexander Nemish</a>
+                    <a href="https://twitter.com/atlanter">@atlanter</a>
                 </h5>
 
                 
