--- a/index.html
+++ b/index.html
@@ -121,6 +121,20 @@
                 
             </div>
         </div>
+        <div class="media" style="float: left; width: 340px; padding-right: 10px;">
+            <h5>
+                <span class="badge badge-info">14:40 - 15:20</span>
+                Clojure/CLJS в жизни с реальными людьми, ггг 
+            </h5>
+            <img class="pull-left img-rounded media-object" data-src="https://pbs.twimg.com/profile_images/378800000541660208/0b86a9e6a1f5d84ba08064e95a67c7c7.jpeg" style="width: 92px; height: 92px;" src="https://pbs.twimg.com/profile_images/378800000541660208/0b86a9e6a1f5d84ba08064e95a67c7c7.jpeg">
+            <div class="media-body">
+                <h5 class="media-heading">
+                    <a href="https://twitter.com/asolovyov">@asolovyov</a>
+                </h5>
+
+                
+            </div>
+        </div>
 
     </section>
 
