--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                 <a href="https://www.facebook.com/events/1427187537499479/" class="btn btn-primary btn-large">Регистрация</a>
                 <a href="https://twitter.com/search/realtime?q=%23kievfprog" class="btn btn-primary btn-large">#kievfprog</a>
             </p>
+            <p>
+            <a href="https://docs.google.com/a/wilab.org.ua/forms/d/1gjK2FTBcoDSFWbFoVn7_w9kowGrJwOCQcwmJp4WrysI/viewform" class="btn btn-warning">Дополнительная регистрация</a>
+            </p>
             <!-- <iframe width="100%" height="400" src="False" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe> -->
         </div>
     </div>
@@ -62,7 +65,7 @@
     <section>
         <a class="anchor" id="agenda"></a>
         <div>
-            <h2>Доклады <small>(расписание будет меняться)</small></h2>
+            <h2>Доклады </h2>
         </div>
 
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
@@ -95,7 +98,7 @@
         </div>
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
             <h5>
-                <span class="badge badge-info">12:40 - 13:20</span>
+                <span class="badge badge-info">12:40 - 13:50</span>
                 Erlang in production. Lessons learned 
             </h5>
             <img class="pull-left img-rounded media-object" data-src="https://secure.gravatar.com/avatar/b9b7a5ffa24e2af6f877a7950461ba0f?s=420&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" style="width: 92px; height: 92px;" src="https://secure.gravatar.com/avatar/b9b7a5ffa24e2af6f877a7950461ba0f?s=420&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png">
@@ -109,7 +112,7 @@
         </div>
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
             <h5>
-                <span class="badge badge-info">13:40 — 14:20</span>
+                <span class="badge badge-info">14:00 - 14:40</span>
                 Erlang без хеш-таблиц 
             </h5>
             <img class="pull-left img-rounded media-object" data-src="https://secure.gravatar.com/avatar/d91a0ffee363be9c58e689fc7fd20599?s=420&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" style="width: 92px; height: 92px;" src="https://secure.gravatar.com/avatar/d91a0ffee363be9c58e689fc7fd20599?s=420&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png">
@@ -123,7 +126,7 @@
         </div>
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
             <h5>
-                <span class="badge badge-info">14:40 - 15:20</span>
+                <span class="badge badge-info">14:50 - 15:30</span>
                 Clojure/CLJS в жизни с реальными людьми, ггг 
             </h5>
             <img class="pull-left img-rounded media-object" data-src="https://pbs.twimg.com/profile_images/378800000541660208/0b86a9e6a1f5d84ba08064e95a67c7c7.jpeg" style="width: 92px; height: 92px;" src="https://pbs.twimg.com/profile_images/378800000541660208/0b86a9e6a1f5d84ba08064e95a67c7c7.jpeg">
