welcome the live stream

--- a/index.html
+++ b/index.html
@@ -46,20 +46,17 @@
             <h3>16 ноября </h3>
             <br/>
             <p>
-                <a href="https://www.facebook.com/events/1427187537499479/" class="btn btn-primary btn-large">Регистрация</a>
+                <a href="#" class="btn btn-primary btn-large disabled">Регистрация уже закрыта</a>
                 <a href="https://twitter.com/search/realtime?q=%23kievfprog" class="btn btn-primary btn-large">#kievfprog</a>
             </p>
-            <p>
-            <a href="https://docs.google.com/a/wilab.org.ua/forms/d/1gjK2FTBcoDSFWbFoVn7_w9kowGrJwOCQcwmJp4WrysI/viewform" class="btn btn-warning">Дополнительная регистрация</a>
-            </p>
-            <!-- <iframe width="100%" height="400" src="False" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe> -->
+            <!-- <iframe width="100%" height="400" src="http://new.livestream.com/accounts/4893877/events/2550946" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe> -->
         </div>
     </div>
 </div>
 <div class="container">
 
     <!-- <section>
-        <iframe width="100%" height="437" src="False" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe>
+        <iframe width="100%" height="437" src="http://new.livestream.com/accounts/4893877/events/2550946" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe>
       </section> -->
 
     <section>
