--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h3>14 июня </h3>
             <br/>
             <p>
-                <a href="True" class="btn btn-primary btn-large">Регистрация</a>
+                <a href="https://www.facebook.com/events/1489824581249853/" class="btn btn-primary btn-large">Регистрация</a>
                 <a href="https://twitter.com/search/realtime?q=%23kievfprog" class="btn btn-primary btn-large">#kievfprog</a>
             </p>
             <!-- <iframe width="100%" height="400" src="None" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe> -->
