added a google docs registration form

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                 <a href="https://twitter.com/search/realtime?q=%23kievfprog" class="btn btn-primary btn-large">#kievfprog</a>
             </p>
             <p>
+            <a href="https://docs.google.com/forms/d/1kSJ7jSzn6Y21ZIlG4ddg2wtY_gDUszmfgZ9bPIi2iuA/viewform?usp=send_form" class="btn btn-warning">Дополнительная регистрация</a>
+            </p>
+            <p>
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                 <input type="hidden" name="cmd" value="_s-xclick">
                 <input type="hidden" name="hosted_button_id" value="GZSFFVKBWPWEC">
