welcome @MAH3IOK

--- a/index.html
+++ b/index.html
@@ -104,6 +104,20 @@
                 
             </div>
         </div>
+        <div class="media" style="float: left; width: 340px; padding-right: 10px;">
+            <h5>
+                <span class="badge badge-info">14:00 — 14:40</span>
+                From Object Algebras to Finally Tagless Interpreters 
+            </h5>
+            <img class="pull-left img-rounded media-object" data-src="https://pbs.twimg.com/profile_images/3596208506/baed00c50df292fa0d0e7878b575233a_reasonably_small.jpeg" style="width: 92px; height: 92px;" src="https://pbs.twimg.com/profile_images/3596208506/baed00c50df292fa0d0e7878b575233a_reasonably_small.jpeg">
+            <div class="media-body">
+                <h5 class="media-heading">
+                    <a href="https://twitter.com/MAH3IOK">@MAH3IOK</a>
+                </h5>
+
+                
+            </div>
+        </div>
 
     </section>
 
