--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
         </div>
 
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
-            <h5>
+            <h5 class="pull-left" style="min-height: 40px;">
                 <span class="badge badge-info">12:00 — 12:40</span>
                 Migrating to Clojure - so much fn 
             </h5>
             <img class="pull-left img-rounded media-object" data-src="https://pbs.twimg.com/profile_images/1250399112/avatar.jpg" style="width: 92px; height: 92px;" src="https://pbs.twimg.com/profile_images/1250399112/avatar.jpg">
-            <div class="media-body">
+            <div class="media-body pull-left">
                 <h5 class="media-heading">
                     <a href="https://twitter.com/janstepien">@janstepien</a>
                 </h5>
@@ -91,12 +91,12 @@
             </div>
         </div>
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
-            <h5>
+            <h5 class="pull-left" style="min-height: 40px;">
                 <span class="badge badge-info">13:00 — 13:40</span>
                 Extensible Effects in Haskell 
             </h5>
             <img class="pull-left img-rounded media-object" data-src="https://pbs.twimg.com/profile_images/458731352758579200/TSideAqh.jpeg" style="width: 92px; height: 92px;" src="https://pbs.twimg.com/profile_images/458731352758579200/TSideAqh.jpeg">
-            <div class="media-body">
+            <div class="media-body pull-left">
                 <h5 class="media-heading">
                     <a href="https://twitter.com/shebang">@shebang</a>
                 </h5>
@@ -105,12 +105,12 @@
             </div>
         </div>
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
-            <h5>
+            <h5 class="pull-left" style="min-height: 40px;">
                 <span class="badge badge-info">14:00 — 14:40</span>
                 From Object Algebras to Finally Tagless Interpreters 
             </h5>
             <img class="pull-left img-rounded media-object" data-src="https://pbs.twimg.com/profile_images/3596208506/baed00c50df292fa0d0e7878b575233a_reasonably_small.jpeg" style="width: 92px; height: 92px;" src="https://pbs.twimg.com/profile_images/3596208506/baed00c50df292fa0d0e7878b575233a_reasonably_small.jpeg">
-            <div class="media-body">
+            <div class="media-body pull-left">
                 <h5 class="media-heading">
                     <a href="https://twitter.com/MAH3IOK">@MAH3IOK</a>
                 </h5>
