welcome @dying_sphynx

--- a/index.html
+++ b/index.html
@@ -118,6 +118,20 @@
                 
             </div>
         </div>
+        <div class="media" style="float: left; width: 340px; padding-right: 10px;">
+            <h5 class="pull-left" style="min-height: 40px;">
+                <span class="badge badge-info">15:00 — 15:40</span>
+                Графы: функциональный подход 
+            </h5>
+            <img class="pull-left img-rounded media-object" data-src="https://pbs.twimg.com/profile_images/563311908/f11.jpg" style="width: 92px; height: 92px;" src="https://pbs.twimg.com/profile_images/563311908/f11.jpg">
+            <div class="media-body pull-left">
+                <h5 class="media-heading">
+                    <a href="https://twitter.com/dying_sphynx">@dying_sphynx</a>
+                </h5>
+
+                
+            </div>
+        </div>
 
     </section>
 
