--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section>
         <a class="anchor" id="agenda"></a>
         <div>
-            <h2>Доклады <small>(расписание будет меняться)</small></h2>
+            <h2>Доклады </h2>
         </div>
 
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
@@ -92,7 +92,7 @@
         </div>
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
             <h5 class="pull-left" style="min-height: 40px;">
-                <span class="badge badge-info">13:00 — 13:40</span>
+                <span class="badge badge-info">12:45 — 13:30</span>
                 Extensible Effects in Haskell 
             </h5>
             <img class="pull-left img-rounded media-object" data-src="https://pbs.twimg.com/profile_images/458731352758579200/TSideAqh.jpeg" style="width: 92px; height: 92px;" src="https://pbs.twimg.com/profile_images/458731352758579200/TSideAqh.jpeg">
@@ -106,7 +106,7 @@
         </div>
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
             <h5 class="pull-left" style="min-height: 40px;">
-                <span class="badge badge-info">14:00 — 14:40</span>
+                <span class="badge badge-info">14:35 — 15:15</span>
                 From Object Algebras to Finally Tagless Interpreters 
             </h5>
             <img class="pull-left img-rounded media-object" data-src="https://pbs.twimg.com/profile_images/3596208506/baed00c50df292fa0d0e7878b575233a_reasonably_small.jpeg" style="width: 92px; height: 92px;" src="https://pbs.twimg.com/profile_images/3596208506/baed00c50df292fa0d0e7878b575233a_reasonably_small.jpeg">
@@ -120,7 +120,7 @@
         </div>
         <div class="media" style="float: left; width: 340px; padding-right: 10px;">
             <h5 class="pull-left" style="min-height: 40px;">
-                <span class="badge badge-info">15:00 — 15:40</span>
+                <span class="badge badge-info">15:20 — 16:00</span>
                 Графы: функциональный подход 
             </h5>
             <img class="pull-left img-rounded media-object" data-src="https://pbs.twimg.com/profile_images/563311908/f11.jpg" style="width: 92px; height: 92px;" src="https://pbs.twimg.com/profile_images/563311908/f11.jpg">
