--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
-            <a class="brand" href="#registration"><strong>#kievfprog 2015</strong></a>
+            <a class="brand" href="#registration"></a>
             <div class="pull-right">
                 <a href="https://www.facebook.com/ical/event.php?eid=1043526685681601" class="btn btn-info">ical</a>
                 <a href="https://www.facebook.com/groups/kiev.fprog/" class="btn btn-info">facebook</a>
@@ -94,7 +94,7 @@
                 <span class="badge badge-info">12:00</span>
                 Что-то про Haskell
             </h5>
-            <img class="pull-left img-rounded media-object" data-src="http://i.stack.imgur.com/MAMOg.png" style="width: 92px; height: 92px;" src="http://i.stack.imgur.com/MAMOg.png">
+            <img class="pull-left img-rounded media-object" data-src="http://www.cliparts101.com/files/848/40654A3F6FECA806F4974BEEE218964C/Greek_Lambda_4.png" style="width: 92px; height: 92px;" src="http://www.cliparts101.com/files/848/40654A3F6FECA806F4974BEEE218964C/Greek_Lambda_4.png">
             <div class="media-body pull-left">
                 <h5 class="media-heading">
                     <a href="">@секрет</a>
