--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                 <a href="https://www.facebook.com/events/1043526685681601/" class="btn btn-primary btn-large">Регистрация</a>
                 <a href="https://twitter.com/search/realtime?q=%23kievfprog" class="btn btn-primary btn-large">#kievfprog</a>
             </p>
+            <p>
+            <a href="http://goo.gl/forms/6sGXNwgwbs" class="btn btn-warning">Дополнительная регистрация</a>
+            </p>
             <!--
             <p>
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
