kievfprog 2017.1 is here!

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 <title>kievfprog</title>
-<meta name="description" content="#kievfprog 2016">
+<meta name="description" content="#kievfprog 2017.1">
 
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="css/styles.css">
@@ -26,7 +26,7 @@
         <div class="container">
             <a class="brand" href="#registration"></a>
             <div class="pull-right">
-                <a href="https://www.facebook.com/groups/kiev.fprog/" class="btn btn-info">facebook</a>
+                <a href="https://fb.me/kievfprog" class="btn btn-info">facebook</a>
             </div>
 ]        </div>
     </div>
@@ -35,11 +35,11 @@
 <div id="slide">
     <div class="container">
         <div class="wrapper" id="registration">
-            <h1>#kievfprog 2016</h1>
-            <h3>November 26 </h3>
+            <h1>#kievfprog 2017.1</h1>
+            <h3>March 18 </h3>
             <br/>
             <p>
-                <a href="http://2016.kievfprog.net" class="btn btn-primary btn-large">👉 Event Website 👈</a>
+                <a href="http://march17.kievfprog.net" class="btn btn-primary btn-large">👉 Event Website 👈</a>
                 <a href="https://twitter.com/kievfprog" class="btn btn-success btn-large">@kievfprog</a>
             </p>
             <!--
@@ -75,6 +75,7 @@
                 <h2>Past meetups</h2>
                 <div>
                   <ul>
+                        <li><a href="http://2016.kievfprog.net">#kievfprog 2016 (November 26)</a></li>
                         <li><a href="https://www.facebook.com/events/108261176248196/">Extraordinary #kievfprog (April 28, 2016)</a></li>
                         <li><a href="https://github.com/kievfprog/kievfprog.github.io/blob/d673a0101da2c00458d505f4414eab93559fc8ba/event.yaml">#kievfprog 2015</a></li>
                         <li><a href="https://github.com/kievfprog/kievfprog.github.io/blob/KIEVFPROG_6/event.yaml">#kievfprog 14 июня 2014</a></li>
@@ -107,7 +108,7 @@
 
 <footer>
     <div class="container">
-        <p class="muted credit pull-right">&copy; 2013-2016 kievfprog fellows</p>
+        <p class="muted credit pull-right">&copy; 2012-2017 kievfprog fellows</p>
     </div>
 </footer>
 
